# grok-search-mcp-rust

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs  server.rs
src/grok/: client.rs  mod.rs  prompts.rs
src/tools/: config.rs  fetch.rs  mod.rs  model.rs  search.rs  toggle.rs
