[package]
name = "grok-search-mcp"
version = "0.2.0"
edition = "2024"
authors = ["pdxxxx"]
description = "Rust MCP server for Grok-powered web search"
license = "MIT"
repository = "https://github.com/pdxxxx/grok-search-mcp-rust"

[dependencies]
rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Pipes", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[[bin]]
name = "grok-search-mcp"
path = "src/main.rs"
